# dotnet-native-runtime

./: CMakeLists.txt
include/: SystemNative.h  config.h.in  stdcountof.h
include/SystemNative/: console.h  dl.h  env.h  io.h  log.h  memory.h  monitor.h  threading.h
src/SystemNative/: console.c  dl.c  env.c  io.c  log.c  memory.c  monitor.c  threading.c
src/math/: CMakeLists.txt  math.c
